started worck on adding edit bottom

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 src="imgs/calculation.png"
                 alt=""
             />
+            <img
+                class="header__settings-button"
+                data-connection="settings"
+                src="imgs/settings.png"
+                alt=""
+            />
         </header>
         <main class="main">
             <div class="list-area">
@@ -56,10 +62,6 @@
                     <button class="end">Завершити</button>
                 </div>
             </div>
-            <div
-                class="modal-bacgraund__calculation"
-                data-connection="calculationM"
-            ></div>
         </div>
         <script src="script.js"></script>
     </body>
