finished setings logick

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     </head>
     <body>
         <header class="header">
+            <button class="onVisible2" data-connection="plasItem">
+                добавити
+            </button>
+            <button class="onVisible2" data-connection="cansel">
+                Завершити
+            </button>
+            <button class="onVisible2" data-connection="delete">
+                Видалити
+            </button>
             <img
                 class="header__folders-button"
                 data-connection="folders"
