--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
     </head>
     <body>
         <header class="header">
-            <button class="onVisible2" data-connection="plasItem">
+            <button
+                class="onVisible2 header__button-seting"
+                data-connection="plasItem"
+            >
                 добавити
             </button>
-            <button class="onVisible2" data-connection="cansel">
+            <button
+                class="onVisible2 header__button-seting"
+                data-connection="cansel"
+            >
                 Завершити
             </button>
-            <button class="onVisible2" data-connection="delete">
+            <button
+                class="onVisible2 header__button-seting"
+                data-connection="delete"
+            >
                 Видалити
             </button>
             <img
